v1.1.7 (09/12/2015)
- Context menu with options for episodes don't show properly in episode view (#36)
- Closing Vote dialog results in Voting 0 for selected Anime (#37)
- Passing more information about playing episode to Player (#38)
- Added 'Play from playlist' context menu to add every episode in folder to playlist (#35)
- overwrite the Player method for future needs

v1.1.6 (04/12/2015)
- Fix bad calculating duration of episode and Total Duration (#32)

v1.1.5 (03/12/2015)
- In plugin settings you can setup timeout till Kodi drop connection with JMMServer (#30)
- Watched/Unwatched now work from Episode List from context menu (#19)
- I added few new settings for future use (Sync and VoteAllways)

v1.1.4 (02/12/2015)
- If you are in Episodes you can Vote for whole Series via context menu (Right Mouse Click or 'C')

v1.1.3 (01/12/2015)
- Cast now populate with Anime Characters (currently kodi dont support adding thumbs for casts from plugin level)

v1.1.2 (29/11/2015)
- Letter 'S' before episode number was thanks to lack of info about number of seasons, JMMServer didn't feed Kodi with it (#27)

v1.1.1 (28/11/2015)
- More types of media have been added
- New way of parsing url
- new 'Play' function that fix problem with 'random error'
- FanArt is now shown everywhere (#25)
- added alot of information about Episodes (#10)
- added alot of information about TVShows and TVSeasons (#12)

v1.1.0 (26/11/2015)
- Added 'Sort' option for series and episodes (#23)
- Started looking for more elegant function and plexbmc.py came into look - so abomination of code is now :-) so many merges
- Information about file is better now (flac/h264/HD icons there!)

v1.0.9 (25/11/2015)
- Adding Characters in JMMServerKodi to feed them to Nakamori
_ Characters support almost complete

v1.0.8 (23/11/2015)
- Proper handling Series that are splitte into Episode/Special directories (#16)
- clean up code that wasn't used

v1.07 (22/11/2015)